--- a/bond/stylesheets/turboludik.css
+++ b/bond/stylesheets/turboludik.css
@@ -83,19 +83,19 @@ em {
 
 /* line 15, ../sass/partials/_typography.scss */
 h1 {
-  font-size: 3rem;
+  font-size: 3em;
   line-height: 1.5em;
 }
 
 /* line 15, ../sass/partials/_typography.scss */
 h2 {
-  font-size: 2.5rem;
+  font-size: 2.5em;
   line-height: 1.5em;
 }
 
 /* line 15, ../sass/partials/_typography.scss */
 h3 {
-  font-size: 2rem;
+  font-size: 2em;
   line-height: 1.5em;
 }
 
