--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -1,11 +1,8 @@
----
----
-
 //
 // IMPORTS
 //
 
-@import "reset";
+@import "compass/reset";
 @import "variables";
 // Syntax highlighting @import is at the bottom of this file
 
