--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -7,17 +7,13 @@
 $blue: #4183C4;
 
 // Grays
-$black: #000;
-$darkerGray: #222;
-$darkGray: #333;
-$gray: #666;
-$lightGray: #eee;
+$headercolor: #333;
+$aboutcolor: #135;
 $white: #fff;
+$linkcolor: darken(red, 10%);
 
-// Font stacks
-$helvetica: Helvetica, Arial, sans-serif;
-$helveticaNeue: "Helvetica Neue", Helvetica, Arial, sans-serif;
-$georgia: Georgia, serif;
+$opensans: "Open Sans", Helvetica, Arial, sans-serif;
+$oswald: Oswald, "Helvetica Narrow", "Arial Narrow", Helvetica, Arial, sans-serif;
 
 // Mobile breakpoints
 @mixin mobile {
