--- a/extra/specials/cv/master.scss
+++ b/extra/specials/cv/master.scss
@@ -158,6 +158,15 @@ body {
         width: 200px;
     }
 }
+
+section a {
+    color: #e73;
+    text-decoration: none;
+    &:hover, &:focus, &:active {
+        text-decoration: underline;
+    }
+}
+
 a.button {
     font-family: $sans;
     float: right;
