--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,8 +19,8 @@
           <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
       <![endif]-->
   <link rel="stylesheet" href="./reset.css">
-  <link rel="stylesheet" href="./style.css">
-  <link rel="icon" type="image/png" href="https://matouche.github.io/favicon.png" />
+  <link rel="stylesheet" href="/style.css">
+  <link rel="icon" type="image/png" href="https://dubrm.github.io/favicon.png" />
 
 </head>
 
