--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,8 +18,9 @@
   <!--[if IE]>
           <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
       <![endif]-->
-  <link rel="stylesheet" href="/reset.css">
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="/reset.css" />
+  <link rel="stylesheet" href="/style.css" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Pangolin" />
   <link rel="icon" type="image/png" href="/favicon.png" />
 
 </head>
