--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,4 @@
----
----
-body {
+--- --- body {
     margin: 2rem;
     font-size: 16px;
     line-height: 1.5em;
@@ -8,58 +6,34 @@ body {
     font-family: "Pangolin", sans-serif;
 }
 
-@media screen and (min-width: 900px) {
-    ul li {
-        display: inline-block;
-        margin-left: 1rem;
-    }
-
-    .video-container {
-        position: absolute;
-        left: 2rem;
-        top: 0%;
-        width: 56%;
-        height: 100%;
-    }
-
-    .video-container iframe {
-        position: absolute;
-        left: 0;
-        top: 0;
-        width: 100%;
-        height: 100%;
-    }
-
-    .presentation {
-        text-align: right;
-        position: absolute;
-        top: 0;
-        height: 100%;
-        right: 5rem;
-        max-width: 30%;
-        display: flex;
-        align-items: center;
-    }
-}
 header {
     h1 a {
         font-size: 2rem;
         margin-bottom: 2rem;
         color: #333;
         text-decoration: none;
+        display: inline-block;
     }
-    
-    nav ul {
-        margin-top: 4rem;
-        li a:hover {
-            color: #B96;
-        }
-        li a {
-            display: inline-block;
-            padding: .5rem 1rem;
-            margin-bottom: 1rem;
-            color: #A85;
-            text-decoration: none;
+
+    nav {
+        display: inline-block;
+
+        ul {
+            li {
+                display: inline-block;
+
+                a:hover {
+                    color: #B96;
+                }
+
+                a {
+                    display: inline-block;
+                    padding: .5rem 1rem;
+                    margin-bottom: 1rem;
+                    color: #A85;
+                    text-decoration: none;
+                }
+            }
         }
     }
 }
