--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,10 +37,10 @@
       </ul>
     </nav>
   </header>
-  <h1>{{ page.title }}</h1>
-  <section>
-    {{ content }}
-  </section>
+  <div class="wrapper"><h1>{{ page.title }}</h1>
+    <section>
+      {{ content }}
+    </section></div>
   <footer>
     
   </footer>
