--- a/style.scss
+++ b/style.scss
@@ -11,7 +11,6 @@ body {
 header {
     h1 a {
         font-size: 2rem;
-        margin-bottom: 2rem;
         color: #333;
         text-decoration: none;
         display: inline-block;
@@ -37,5 +36,10 @@ header {
                 }
             }
         }
+    }
+}
+.wrapper {
+    &>h1 {
+        font-size: 1.5rem;
     }
 }
