--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,46 +3,45 @@
 
 <head>
   <meta charset="utf-8">
-  <title>{{ page.title }} - Mathis Dubrul</title>
+  <title>{{ page.title }} - {{site.title}}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
-  <title>Mathis Dubrul</title>
-  <meta name="description" content="Mathis Dubrul, animateur 2D et réalisateur de films d'animation" />
-  <meta name="author" content="Mathis Dubrul" />
-  <meta property="og:site_name" content="Mathis Dubrul">
-  <meta property="og:title" content="Mathis Dubrul" />
-  <meta property="og:description" content="Animateur 2D - Réalisateur de films d'animation" />
+  <meta name="description" content="{{site.description}}" />
+  <meta name="author" content="{{site.author}}" />
+  <meta property="og:site_name" content="{{site.title}}">
+  <meta property="og:title" content="{{ page.title }} - {{site.title}}" />
+  <meta property="og:description" content="{{site.description}}" />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://matouche.github.io/favicon.png" />
-  <link rel="canonical" href="https://matouche.github.io" />
-  <meta property="og:url" content="https://matouche.github.io" />
+  <meta property="og:image" content="{{site.url}}/favicon.png" />
+  <link rel="canonical" href="{{site.url}}" />
+  <meta property="og:url" content="{{site.url}}" />
   <!--[if IE]>
           <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
       <![endif]-->
-  <link rel="stylesheet" href="/reset.css" />
-  <link rel="stylesheet" href="/style.css" />
+  <link rel="stylesheet" href="{{site.url}}/reset.css" />
+  <link rel="stylesheet" href="{{site.url}}/style.css" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Pangolin" />
-  <link rel="icon" type="image/png" href="/favicon.png" />
+  <link rel="icon" type="image/png" href="{{site.url}}/favicon.png" />
 
 </head>
 
 <body>
-  <header>
-    <h1><a href="/">Mathis Dubrul</a></h1>
-    <nav>
+  <header class="page-header">
+    <hgroup>
+      <h1><a href="/">{{site.title}}</a></h1>
+      <p>{{site.subtitle}}</p>
+    </hgroup>
+    <nav class="header-menu">
       <ul>
-        <li><a href="/portfolio/">Portfolio</a></li>
+        <li><a href="{{site.url}}">Portfolio</a></li>
         <li><a href="https://vimeo.com/mathisdubrul">Vimeo</a></li>
         <li><a href="https://www.instagram.com/mathisdubrul/">Instagram</a></li>
-        <li><a href="/cv.html">CV</a></li>
+        <li><a href="{{site.url}}/cv.html">CV</a></li>
       </ul>
     </nav>
   </header>
-  <div class="wrapper"><h1>{{ page.title }}</h1>
-    <section>
-      {{ content }}
-    </section></div>
+  {{ content }}
   <footer>
-    
+    🌍 Valence, Drôme
   </footer>
 </body>
 
