--- a/style.scss
+++ b/style.scss
@@ -78,6 +78,10 @@ body {
     .vimeo {
         height: min(540px, 57vw);
     }
+    ul {
+        padding-left: 2rem;
+        list-style-type: "🌻 ";
+    }
 }
 
 .grid {
