--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,13 +35,14 @@
         <li><a href="{{site.url}}">Portfolio</a></li>
         <li><a href="https://vimeo.com/mathisdubrul">Vimeo</a></li>
         <li><a href="https://www.instagram.com/mathisdubrul/">Instagram</a></li>
-        <li><a href="{{site.url}}/cv.html">CV</a></li>
+        <!--<li><a href="{{site.url}}/cv.html">CV</a></li>-->
       </ul>
     </nav>
   </header>
   {{ content }}
   <footer>
-    🌍 Valence, Drôme
+    <p>⁂</p>
+    <p>🌍 Valence, Drôme</p>
   </footer>
 </body>
 
