--- a/style.scss
+++ b/style.scss
@@ -82,6 +82,9 @@ body {
         padding-left: 2rem;
         list-style-type: "🌻 ";
     }
+    img {
+        max-width: 100%;
+    }
 }
 
 .grid {
