--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,10 +32,10 @@
     </hgroup>
     <nav class="header-menu">
       <ul>
-        <li><a href="{{site.url}}">Portfolio</a></li>
+        <li><a href="{{site.url}}/demo/">Bande démo</a></li>
         <li><a href="https://vimeo.com/mathisdubrul">Vimeo</a></li>
         <li><a href="https://www.instagram.com/mathisdubrul/">Instagram</a></li>
-        <!--<li><a href="{{site.url}}/cv.html">CV</a></li>-->
+        <li><a href="{{site.url}}/cv/">CV</a></li>
       </ul>
     </nav>
   </header>
