--- a/style.scss
+++ b/style.scss
@@ -46,7 +46,7 @@ body {
     }
 }
 
-.post-wrapper {
+.post-wrapper, .page-wrapper {
     margin: auto;
     max-width: 50rem;
     display: flex;
@@ -59,6 +59,9 @@ body {
 
     h2 {
         font-size: 1.5rem;
+    }
+    h3 {
+        font-weight: bold;
     }
 
     p,
@@ -80,12 +83,23 @@ body {
     }
     ul {
         padding-left: 2rem;
-        list-style-type: "🌻 ";
     }
     img {
         max-width: 100%;
     }
 }
+
+.post-wrapper ul {
+    list-style-type: "🌻 ";
+}
+
+.page-wrapper ul {
+    list-style-type: "➺ ";
+    ul {
+        list-style-type: "⤷ ";
+    }
+}
+
 
 .grid {
     display: grid;
@@ -148,4 +162,10 @@ footer {
     margin-top: 2rem;
     text-align: center;
     opacity: 25%;
+}
+
+.cv {
+    display: grid;
+    grid-gap: 3rem;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
 }
