--- a/style.scss
+++ b/style.scss
@@ -166,6 +166,7 @@ footer {
 
 .cv {
     display: grid;
-    grid-gap: 3rem;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    gap: 1rem 2rem;
+    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+    font-size: 1.1rem;
 }
