Update CV and font-family

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
       <![endif]-->
   <link rel="stylesheet" href="{{site.url}}/reset.css" />
   <link rel="stylesheet" href="{{site.url}}/style.css" />
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Pangolin" />
+  <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" href="{{site.url}}/favicon.png" />
 
 </head>
