--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 
 <main class="post-wrapper">
   {% if page.vimeo != nil %}
-  <iframe class="vimeo" src="https://player.vimeo.com/video/{{ page.vimeo }}?h=05e2e9581c&color=aa8855&title=0&byline=0&portrait=0" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+  <iframe class="vimeo" src="https://player.vimeo.com/video/{{ page.vimeo }}?h=05e2e9581c&color=99bb55&title=0&byline=0&portrait=0" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
   <script src="https://player.vimeo.com/api/player.js"></script>
   {% endif %}
   <h1>{{page.title}}</h1>
