--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 ---
+<p><em>Cliquez sur une image pour en savoir plus sur le projet concerné.</em></p>
 <ul class="grid">
 {%- for post in site.categories.portfolio -%}
   <li>
