--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<p style="text-align:center;"><em>Cliquez sur une image pour en savoir plus sur le projet concerné.</em></p>
+<p style="text-align:center;margin-bottom: 1rem;"><em>Cliquez sur une image pour en savoir plus sur le projet concerné.</em></p>
 <ul class="grid">
 {%- for post in site.categories.portfolio -%}
   <li>
