--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,7 @@
   {{ content }}
   <footer>
     <p>⁂</p>
-    <p>🌍 Valence, Drôme</p>
+    <p>🌍 1000, Bru·x·ss·el·les</p>
   </footer>
 </body>
 
